--- a/couch_runs.ipynb
+++ b/couch_runs.ipynb
@@ -6,7 +6,6 @@
       "name": "couch_runs.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "private_outputs": true,
       "collapsed_sections": [],
       "toc_visible": true,
       "include_colab_link": true
@@ -202,6 +201,116 @@
       "source": [
         "# Data sense-checking"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sFAJTG4TfzMz",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Timestamps on iOS and Android\n",
+        "Android is believed to be an hour behind but it doesn't look like it in comparison to iOS."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "52OrVtqVqu5C",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "runs_count_by_os = sql_to_df(\"\"\"\n",
+        "    SELECT\n",
+        "        device_os,\n",
+        "        HOUR(started_at) AS hour,\n",
+        "        COUNT(DISTINCT started_at) AS run_count\n",
+        "    FROM\n",
+        "        c25k_run\n",
+        "    GROUP BY\n",
+        "        hour,\n",
+        "        device_os\n",
+        "        \"\"\")\n",
+        "\n",
+        "runs_count_by_os.head()\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HVh7IKkFvD7e",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# sum of android runs for use in the function below\n",
+        "android_sum = runs_count_by_os[\n",
+        "    runs_count_by_os['device_os'] == 'android']['run_count'].sum()\n",
+        "\n",
+        "# sum of ios runs for use in the function below\n",
+        "ios_sum = runs_count_by_os[\n",
+        "    runs_count_by_os['device_os'] == 'ios']['run_count'].sum()\n",
+        "\n",
+        "def percent_by_os(row):\n",
+        "    \n",
+        "    \"\"\"Evaluate device_os and calculate percentage of runs in row.\"\"\"\n",
+        "    \n",
+        "    if row['device_os'] == 'android':\n",
+        "        return round(\n",
+        "            row['run_count'] / android_sum * 100, 1)\n",
+        "\n",
+        "    elif row['device_os'] == 'ios':\n",
+        "        return round(\n",
+        "            row['run_count'] / ios_sum * 100, 1)\n",
+        "\n",
+        "    else:\n",
+        "        raise ValueError(\n",
+        "            'Some row doesn\\'t meet the if-elif conditions.'\n",
+        "            ) # error message also returns row index number\n",
+        "\n",
+        "        "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_QdlpSswJ0eb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# apply function to create a new column\n",
+        "runs_count_by_os['%_of_all_runs_by_os'] = runs_count_by_os.apply(lambda row:\n",
+        "                                                                 percent_by_os(row),\n",
+        "                                                                 axis=1)\n",
+        "\n",
+        "runs_count_by_os.head()\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_bFhXOHiMuOn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "alt.Chart(runs_count_by_os,\n",
+        "          title='Percent of all runs by hour and OS').mark_line(\n",
+        ").encode(\n",
+        "    x='hour',\n",
+        "    y='%_of_all_runs_by_os',\n",
+        "    color='device_os')\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -704,6 +813,8 @@
         "            COUNT(id) AS runs\n",
         "        FROM\n",
         "            c25k_run\n",
+        "        WHERE\n",
+        "            device_os = 'android'\n",
         "        GROUP BY\n",
         "            weekday,\n",
         "            hour\n",
@@ -731,7 +842,7 @@
         "                          fields=['weekday'],\n",
         "                          nearest=True)\n",
         "\n",
-        "base = alt.Chart(runs_by_hourG, \n",
+        "base = alt.Chart(runs_by_hour, \n",
         "                 title='Avg. number of runs by hour of day').encode(\n",
         "    x='hour:N',\n",
         "    y='avg_runs:Q',\n",
