--- a/couch_funfacts.ipynb
+++ b/couch_funfacts.ipynb
@@ -76,11 +76,11 @@
       "source": [
         "def connect():\n",
         "    return pymysql.connect(\n",
-        "        host='35.176.49.144',\n",
-        "        port=1717,\n",
-        "        user='admin',\n",
-        "        passwd='uouQAhiplz2IivawElfx',\n",
-        "        db='insights',\n",
+        "        host='',\n",
+        "        port=,\n",
+        "        user='',\n",
+        "        passwd='',\n",
+        "        db='',\n",
         "        autocommit=True\n",
         "        )\n",
         "\n",
