--- a/couch_funfacts.ipynb
+++ b/couch_funfacts.ipynb
@@ -274,10 +274,10 @@
         "colab": {}
       },
       "source": [
-        "active_minutes = round(select['active_minutes'].sum(), 1)\n",
+        "active_minutes = round(select['active_minutes'].sum(), 2)\n",
         "\n",
-        "# 60 minutes / 24 hours / 7 days / 52 weeks\n",
-        "active_years = round(active_minutes / 60 / 24 / 7 / 52, 1)\n"
+        "# divided by 60 for an hour / 24 for a day / 365 for a year\n",
+        "active_years = round(active_minutes / 60 / 24 / 365, 1)\n"
       ],
       "execution_count": 0,
       "outputs": []
